--- a/src/views/layout/layout.ejs
+++ b/src/views/layout/layout.ejs
@@ -44,11 +44,11 @@
                     <ul class="nav flex-column">
                         <li class="nav-item"><a href="/dashboard" class="nav-link"><i
                                     class="bi bi-house me-2"></i> Dashboard</a></li>
-                        <li class="nav-item"><a href="/clients" class="nav-link"><i
+                        <li class="nav-item"><a href="/clients/list-clients" class="nav-link"><i
                                     class="bi bi-people me-2"></i> Clients</a></li>
                         <li class="nav-item"><a href="/appointments" class="nav-link"><i
                                     class="bi bi-calendar2 me-2"></i> Appointments</a></li>
-                        <li class="nav-item"><a href="/payments" class="nav-link"><i
+                        <li class="nav-item"><a href="/clients/missing-payments" class="nav-link"><i
                                     class="bi bi-cash-stack me-2"></i> Payments</a></li>
                         <li class="nav-item"><a href="/admin/promote" class="nav-link"><i
                                     class="bi bi-person-gear me-2"></i> Approve Users</a>
