--- a/src/views/pages/admin/promote.ejs
+++ b/src/views/pages/admin/promote.ejs
@@ -5,7 +5,7 @@
     <p class="text-muted">Only Admins can view this page.</p>
   
     <% if (users.length> 0) { %>
-      <table class="table table-bordered">
+      <table class="table table-bordered table-responsive">
         <thead>
           <tr>
             <th>Name</th>
