--- a/src/views/pages/clients/client-payments.ejs
+++ b/src/views/pages/clients/client-payments.ejs
@@ -1,7 +1,7 @@
 <div class="d-flex min-vh-100">
   <%- include("../../partials/sidebar") %>
 
-    <div class="flex-grow-1 p-4">
+    <div class="flex-grow-1 px-3 py-4" style="min-width: 0;">
       <h1><%= title %></h1>
       <% if (payment_types && payment_types.length > 0) { %>
         <div class="table-responsive">
